--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -9,7 +9,10 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/checkout@v1
+        - name: Checkout
+          uses: actions/checkout@v1
+        - name: Checkout submodules
+          uses: textbook/git-checkout-submodule-action@master
         - name: Setup Python
           uses: actions/setup-python@v1
           with:
