--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -17,6 +17,8 @@ jobs:
           uses: actions/setup-python@v1
           with:
               python-version: 3.6
+        - name: Install dependencies
+          run: python -m pip install --upgrade pip setuptools wheel
         - name: Build Layers Package
           run: |
               cd mead-baseline/layers
