--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -12,7 +12,8 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v1
         - name: Checkout submodules
-          uses: textbook/git-checkout-submodule-action@master
+          run: git submodule update --init --recursive
+          #uses: textbook/git-checkout-submodule-action@master
         - name: Setup Python
           uses: actions/setup-python@v1
           with:
