--- a/Dockerfile.tf2
+++ b/Dockerfile.tf2
@@ -1,5 +1,6 @@
 # This is built on CUDA 10.1
-FROM tensorflow/tensorflow:2.1.0-gpu-py3
+# everything after 2.2 is Python3
+FROM tensorflow/tensorflow:2.2.0-gpu
 
 COPY mead-baseline /usr/mead/mead-baseline
 
@@ -22,11 +23,11 @@ ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
 COPY . /usr/mead
 
 # Install tensorflow
-RUN python3.6 -m pip install tensorflow && \
-    python3.6 -m pip install tensorflow-hub && \
-    python3.6 -m pip install Cython && \
-    python3.6 -m pip install fastBPE && \
-    python3.6 -m pip install mead-xpctl
+RUN python -m pip install tensorflow_addons && \
+    python -m pip install tensorflow-hub && \
+    python -m pip install Cython && \
+    python -m pip install fastBPE && \
+    python -m pip install mead-xpctl
 
 ENTRYPOINT ["mead-train", "--config", "config/sst2.json"]
 
