--- a/Dockerfile.pytorch
+++ b/Dockerfile.pytorch
@@ -21,7 +21,8 @@ ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH
 COPY . /usr/mead
 
 # Install pytorch
-RUN python3.6 -m pip install torch==1.5.0+cu101 -f https://download.pytorch.org/whl/torch_stable.html && \
+RUN python3.6 -m pip install torch==1.7.0+cu101 -f https://download.pytorch.org/whl/torch_stable.html && \
+    python3.6 -m pip install torchelastic && \
     python3.6 -m pip install Cython && \
     python3.6 -m pip install fastBPE && \
     python3.6 -m pip install tfrecord && \
