upgrade python to 3.8

--- a/Dockerfile.cuda11
+++ b/Dockerfile.cuda11
@@ -7,10 +7,10 @@ RUN apt-get update && \
     apt-get install -y g++ make software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    apt-get install -y python3-pip python3.6 && \
+    apt-get install -y python3-pip python3.8 && \
     rm -rf /var/lib/apt/lists/*
 
 # Install pip and install tools
-RUN python3.6 -m pip install --upgrade pip && \
-    python3.6 -m pip install setuptools && \
-    python3.6 -m pip install certifi
+RUN python3.8 install --upgrade pip && \
+    python3.8 -m pip install setuptools && \
+    python3.8 -m pip install certifi
