--- a/Dockerfile.cuda11
+++ b/Dockerfile.cuda11
@@ -1,5 +1,5 @@
 ARG CUDA_VERSION=11.1.1
-ARG_CUDDN=8
+ARG CUDDN=8
 # For access to GPU
 FROM nvidia/cuda:${CUDA_VERSION}-cudnn${CUDNN}-devel-ubuntu18.04
 # Install tools
