--- a/Dockerfile.pytorch-cuda11
+++ b/Dockerfile.pytorch-cuda11
@@ -23,7 +23,7 @@ COPY . /usr/mead
 # Install pytorch
 
 
-RUN python3.8 -m pip install torch==1.8.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html && \
+RUN python3.8 -m pip --no-cache-dir install torch==1.8.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html && \
     python3.8 -m pip install torchelastic && \
     python3.8 -m pip install Cython && \
     python3.8 -m pip install fastBPE && \
