--- a/Dockerfile.cuda11
+++ b/Dockerfile.cuda11
@@ -5,7 +5,7 @@ RUN apt-get update && \
     apt-get install -y g++ make software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    apt-get install -y python3-pip python3.8 && \
+    apt-get install -y python3-pip python3.8 python3.8-dev && \
     rm -rf /var/lib/apt/lists/*
 
 # Install pip and install tools
